--- a/matlab/src/app/page.mdx
+++ b/matlab/src/app/page.mdx
@@ -6,11 +6,17 @@ Complete MATLAB Digital Signal Processing Learning Resource, from Absolute Basic
 
 - [Getting Started](getting-started)
 - [Plotting and Visualisation](visualisation)
-- [Filter Design](filter-design)
-- [Spectral Analysis](spectral-analysis)
+- [Signals](signals/unit-impulse)
+- [Systems](systems/discrete-vs-continuous)
+- [The Frequency Domain](frequency)
+- [Digital Filters](digital-filters)
+- [Practical Workflows](workflows)
+- [Practices](practices)
+- [Appendix](appendix)
+- [Final Notes](final-notes)
 
 
 ### Contributors
 
-- [Suprava Dutta](https://github.com/sDaCoder)
 - [Sananda Patel](https://github.com/sanandapatel)
+- [Suprava Dutta](https://github.com/sDaCoder)
